Further work on chart dialog docs

--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1703,6 +1703,24 @@
     clicking on the respective tabs.
 </p>
 <p class="one_line_heading">
+    Each data series can be of a specific type that is chosen from the list
+    that is on the left side of the Series panel. In version 1.0.3 there are
+    eight series types: plot, bar, hist, boxplot, pie, annotate, contour and
+    Sankey. Note that the series type names correspond to the respective
+    matplotlib names. Other types of matplotlib series are not supported in
+    the chart dialog. If such a need arises please post an e-mail to the
+    mailing list <a href="mailto:pyspread-users@gna.org">
+    pyspread-users@gna.org</a>.
+</p>
+<p class="one_line_heading">
+    When the plot series type is selected then on the right panel, Data, Line
+    and Marker boxes are displayed. In the Data box, a data label can be
+    specified that appears in the legend if it is activated. The X field is
+    optional. It has to be an iterable of the same length of Y and allows
+    specifying the X values of each data point. In the Y field, Y values of
+    each point are specified in an iterable.
+</p>
+<p class="one_line_heading">
     <i>Figure panel</i>
 </p>
 <p class="one_line_heading">
