First steps polish 3

--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1727,7 +1727,7 @@
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-plot.png">
             <img alt="Chart dialog" src="images/screenshot-chartdialog-plot_thumb.png"
-                 style="border: 0px solid ; width: 200px; height: 156px;">
+                 style="border: 0px solid ; width: 200px; height: 117px;">
     </a>
 </p>
 <p class="one_line_heading">
@@ -1736,7 +1736,7 @@
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-bar.png">
             <img alt="Chart dialog" src="images/screenshot-chartdialog-bar_thumb.png"
-                 style="border: 0px solid ; width: 200px; height: 156px;">
+                 style="border: 0px solid ; width: 200px; height: 117px;">
     </a>
 </p>
 <p class="one_line_heading">
@@ -1745,31 +1745,25 @@
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-hist.png">
             <img alt="Chart dialog" src="images/screenshot-chartdialog-hist_thumb.png"
-                 style="border: 0px solid ; width: 200px; height: 156px;">
+                 style="border: 0px solid ; width: 200px; height: 117px;">
     </a>
 </p>
 <p class="one_line_heading">
     <i>Boxplot</i>
 </p>
 <p class="one_line_heading">
-    <a href="images/screenshot-chartdialog-plot.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-plot_thumb.png"
-                 style="border: 0px solid ; width: 200px; height: 156px;">
-    </a>
-</p>
-<p class="one_line_heading">
-    <a href="images/screenshot-chartdialog-plot.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-plot_thumb.png"
-                 style="border: 0px solid ; width: 200px; height: 156px;">
+    <a href="images/screenshot-chartdialog-boxplot.png">
+            <img alt="Chart dialog" src="images/screenshot-chartdialog-boxplot_thumb.png"
+                 style="border: 0px solid ; width: 200px; height: 115px;">
     </a>
 </p>
 <p class="one_line_heading">
     <i>Pie chart</i>
 </p>
 <p class="one_line_heading">
-    <a href="images/screenshot-chartdialog-boxplot.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-boxplot_thumb.png"
-                 style="border: 0px solid ; width: 200px; height: 156px;">
+    <a href="images/screenshot-chartdialog-piechart.png">
+            <img alt="Chart dialog" src="images/screenshot-chartdialog-piechart_thumb.png"
+                 style="border: 0px solid ; width: 200px; height: 115px;">
     </a>
 </p>
 <p class="one_line_heading">
@@ -1778,7 +1772,7 @@
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-annotation.png">
             <img alt="Chart dialog" src="images/screenshot-chartdialog-annotation_thumb.png"
-                 style="border: 0px solid ; width: 200px; height: 156px;">
+                 style="border: 0px solid ; width: 200px; height: 115px;">
     </a>
 </p>
 <p class="one_line_heading">
@@ -1787,7 +1781,7 @@
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-sankey.png">
             <img alt="Chart dialog" src="images/screenshot-chartdialog-sankey_thumb.png"
-                 style="border: 0px solid ; width: 200px; height: 156px;">
+                 style="border: 0px solid ; width: 200px; height: 115px;">
     </a>
 </p>
 <p class="one_line_heading">
@@ -2323,7 +2317,9 @@
     <\pre><pre>
 			for c in xrange(5, 7)] + 
     <\pre><pre>
-            [(9, 7, 0)] + [(11, 7, 0)] if S[key] is not None])
+            [(9, 7, 0)] + 
+    <\pre><pre>
+            [(11, 7, 0)] if S[key] is not None])
     </pre>
 </p>
 <h2>Table selector</h2>
