--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1726,7 +1726,7 @@
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-plot.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-plot_thumb.png"
+            <img alt="Chart dialog with plot chart" src="images/screenshot-chartdialog-plot_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 117px;">
     </a>
 </p>
@@ -1735,7 +1735,7 @@
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-bar.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-bar_thumb.png"
+            <img alt="Chart dialog with bar chart" src="images/screenshot-chartdialog-bar_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 117px;">
     </a>
 </p>
@@ -1744,7 +1744,7 @@
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-hist.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-hist_thumb.png"
+            <img alt="Chart dialog with histogram" src="images/screenshot-chartdialog-hist_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 117px;">
     </a>
 </p>
@@ -1753,7 +1753,7 @@
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-boxplot.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-boxplot_thumb.png"
+            <img alt="Chart dialog with boxplot" src="images/screenshot-chartdialog-boxplot_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 115px;">
     </a>
 </p>
@@ -1762,7 +1762,7 @@
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-piechart.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-piechart_thumb.png"
+            <img alt="Chart dialog with pie chart" src="images/screenshot-chartdialog-piechart_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 115px;">
     </a>
 </p>
@@ -1771,7 +1771,7 @@
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-annotation.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-annotation_thumb.png"
+            <img alt="Chart dialog with chart annotation" src="images/screenshot-chartdialog-annotation_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 115px;">
     </a>
 </p>
@@ -1780,7 +1780,7 @@
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-sankey.png">
-            <img alt="Chart dialog" src="images/screenshot-chartdialog-sankey_thumb.png"
+            <img alt="Chart dialog with Senkey diagram" src="images/screenshot-chartdialog-sankey_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 115px;">
     </a>
 </p>
@@ -2312,13 +2312,13 @@
     The resulting code may look like this:
     <pre>
         sum([S[key] for key in 
-    <\pre><pre>
+    </pre><pre>
 		[(r, c, 0) for r in xrange(1, 5) 
-    <\pre><pre>
+    </pre><pre>
 			for c in xrange(5, 7)] + 
-    <\pre><pre>
+    </pre><pre>
             [(9, 7, 0)] + 
-    <\pre><pre>
+    </pre><pre>
             [(11, 7, 0)] if S[key] is not None])
     </pre>
 </p>
@@ -2484,5 +2484,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 8. July 2016</span>
+  Last changed: 6. November 2016</span>
 </p>
