Contour chart added to 1st steps

--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1776,6 +1776,15 @@
     </a>
 </p>
 <p class="one_line_heading">
+    <i>Countour chart</i>
+</p>
+<p class="one_line_heading">
+    <a href="images/screenshot-chartdialog-contour.png">
+            <img alt="Chart dialog with contour chart" src="images/screenshot-chartdialog-contour_thumb.png"
+                 style="border: 0px solid ; width: 200px; height: 115px;">
+    </a>
+</p>
+<p class="one_line_heading">
     <i>Sankey diagram</i>
 </p>
 <p class="one_line_heading">
