Skeleton for chart dialog diagram types descriptions laid out.

--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1718,11 +1718,20 @@
 </p>
 <p class="one_line_heading">
     When the plot chart type is selected then on the right panel, Data, Line
-    and Marker boxes are displayed. In the Data box, a data label can be
+    and Marker boxes are displayed.
+</p>
+<p class="one_line_heading">
+    In the Data box, a data label can be
     specified that appears in the legend if it is activated. The X field is
     optional. It has to be an iterable of the same length of Y and allows
     specifying the X values of each data point. In the Y field, Y values of
     each point are specified in an iterable.
+</p>
+<p class="one_line_heading">
+   In the Line box, ...
+</p>
+<p class="one_line_heading">
+   In the Marker box, ...
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-plot.png">
@@ -1734,6 +1743,29 @@
     <i>Bar chart</i>
 </p>
 <p class="one_line_heading">
+    When the bar chart type is selected then on the right panel, Data and
+    Bar boxes are displayed.
+</p>
+<p class="one_line_heading">
+    In the Data box, a data label can be
+    specified that appears in the legend if it is activated. The left 
+    positions field is mandatory. It expects an iterable of left bar values
+    that is as long as the bar heights iterable that defines the upper limits
+    of the bars (not the bar lengths). The bar widths field expects either a 
+    number that applies to all bars or an iterable so that specific bars may 
+    have different widths.  The bar bottoms field is optional and defines the 
+    lower limit of the bars. Similarly to the widths field, it allows entering a
+    number or an iterable.
+</p>
+<p class="one_line_heading">
+   In the Bar box, ...
+</p>
+<p class="one_line_heading">
+    Note that while bar charts may be morte difficult to use than plot charts,
+    they can be used in order to plot arbitrary rectangles, which makes them 
+    also applicable for example to plot simple top down views on room layouts.
+</p>
+<p class="one_line_heading">
     <a href="images/screenshot-chartdialog-bar.png">
             <img alt="Chart dialog with bar chart" src="images/screenshot-chartdialog-bar_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 117px;">
@@ -1741,6 +1773,16 @@
 </p>
 <p class="one_line_heading">
     <i>Histogram</i>
+</p>
+<p class="one_line_heading">
+    When the histogram chart type is selected then on the right panel, Data and
+    Histogram boxes are displayed.
+</p>
+<p class="one_line_heading">
+   In the Data box, ...
+</p>
+<p class="one_line_heading">
+   In the Histogram box, ...
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-hist.png">
@@ -1752,6 +1794,16 @@
     <i>Boxplot</i>
 </p>
 <p class="one_line_heading">
+    When the boxplot chart type is selected then on the right panel, Data and
+    Box plot boxes are displayed.
+</p>
+<p class="one_line_heading">
+   In the Data box, ...
+</p>
+<p class="one_line_heading">
+   In the Box plot box, ...
+</p>
+<p class="one_line_heading">
     <a href="images/screenshot-chartdialog-boxplot.png">
             <img alt="Chart dialog with boxplot" src="images/screenshot-chartdialog-boxplot_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 115px;">
@@ -1759,6 +1811,16 @@
 </p>
 <p class="one_line_heading">
     <i>Pie chart</i>
+</p>
+<p class="one_line_heading">
+    When the pie chart type is selected then on the right panel, Data and
+    Pie boxes are displayed.
+</p>
+<p class="one_line_heading">
+   In the Data box, ...
+</p>
+<p class="one_line_heading">
+   In the Pie box, ...
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-piechart.png">
@@ -1770,6 +1832,12 @@
     <i>Chart annotation</i>
 </p>
 <p class="one_line_heading">
+    When the annotation chart type is selected then on the right panel, an Annotation box is displayed.
+</p>
+<p class="one_line_heading">
+   In the Annotation box, ...
+</p>
+<p class="one_line_heading">
     <a href="images/screenshot-chartdialog-annotation.png">
             <img alt="Chart dialog with chart annotation" src="images/screenshot-chartdialog-annotation_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 115px;">
@@ -1779,6 +1847,22 @@
     <i>Countour chart</i>
 </p>
 <p class="one_line_heading">
+    When the contour chart type is selected then on the right panel, Data and
+    Lines, Areas and Labels boxes are displayed.
+</p>
+<p class="one_line_heading">
+   In the Data box, ...
+</p>
+<p class="one_line_heading">
+   In the Lines box, ...
+</p>
+<p class="one_line_heading">
+   In the Areas box, ...
+</p>
+<p class="one_line_heading">
+   In the Labels box, ...
+</p>
+<p class="one_line_heading">
     <a href="images/screenshot-chartdialog-contour.png">
             <img alt="Chart dialog with contour chart" src="images/screenshot-chartdialog-contour_thumb.png"
                  style="border: 0px solid ; width: 200px; height: 115px;">
@@ -1786,6 +1870,19 @@
 </p>
 <p class="one_line_heading">
     <i>Sankey diagram</i>
+</p>
+<p class="one_line_heading">
+    When the Sankey chart type is selected then on the right panel, Data and
+    Diagram and Area boxes are displayed.
+</p>
+<p class="one_line_heading">
+   In the Data box, ...
+</p>
+<p class="one_line_heading">
+   In the Diagram box, ...
+</p>
+<p class="one_line_heading">
+   In the Area box, ...
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-sankey.png">
