Contribution page updated

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -38,39 +38,51 @@
 
 </p>
 
-<p class="one_line_heading">
-
-  Localization status (for latest additions see the
-  <a href="http://translationproject.org/domain/pyspread.html">translation project page</a>):
-
+<p class="one_line_heading"; style="color: rgb(0, 153, 0)>
+  Full coverage of user interface (may still need polish):
+  <ul class="one_line_heading"> 
+    <li>Danish (da) by Joe Hansen</li>
+    <li>Ukrainian (uk) by Yuri Chornoivan</li>
+  </ul>
 </p>
 
-<ul class="one_line_heading">
-  <li style="color: rgb(0, 153, 0);">Brazilian Portuguese (pt_BR): 549 /
-    549 translated by Enrico Nicoletto and Rafael Fontenelle</li>
-  <li style="color: rgb(0, 153, 0);">Danish (da): 549 / 549
-    translated by Joe Hansen</li>
-  <li style="color: rgb(255, 0, 0);">Dutch (nl): 101 / 549
-    translated by Mark Haanen</li>
-  <li style="color: rgb(255, 0, 0);">French (fr): 462 / 549
-    translated by Frédéric Marchal</li>
-  <li style="color: rgb(0, 153, 0);">German (de): 549 / 549
-    translated by Mario Blättermann, Martin Manns and Christian Kirbach</li>
-  <li style="color: rgb(255, 0, 0);">Nowegian Bokmaal (nb): 239 /
-    549 translated by Andreas Noteng</li>
-  <li style="color: rgb(255, 0, 0);">Nowegian Nynorsk (nn): 497 /
-    549 translated by Andreas Noteng</li>
-  <li style="color: rgb(0, 153, 0);">Ukrainian (uk): 549 /
-    549 translated by Yuri Chornoivan</li>
-</ul>
+<p class="one_line_heading"; style="color: rgb(0, 153, 0)>
+  Partially translated user interface:
+  <ul class="one_line_heading"> 
+    <li>Brazilian Portuguese (pt_BR) by Enrico Nicoletto and Rafael Fontenelle</li>
+    <li>Dutch (nl) by Mark Haanen</li>
+    <li>French (fr) by Frédéric Marchal</li>
+    <li>German (de) by Mario Blättermann, Martin Manns, Christian Kirbach and Philipp Thomas</li>
+    <li>Nowegian Bokmaal (nb) by Andreas Noteng</li>
+    <li>Nowegian Nynorsk (nn) by Andreas Noteng</li>
+  </ul>
+</p>
 
+<p class="one_line_heading">
+  Details of the user interface localization status can be seen at the
+  <a href="http://translationproject.org/domain/pyspread.html">translation project page</a>.
+</p>
+
+<p class="one_line_heading">
+  No translations of the user documentation (e.g. the 
+  <a href src="https://manns.github.io/pyspread/first_steps.html">First steps document</a>
+  ) are available, yet.
+</p>
+
+<h1>Localization</h1>
+
+<p class="one_line_heading">
+  Only basic support for the <a href src="http://opendocumentformat.org">Open Document Format (ODF)</a>
+  for exchanging spreaddheet data with other applications such as LibreOffice, Gnumeric etc. is available.
+  It can be extended by adding features to the source file <code>pyspread/src/interfaces/ods.py</code>.
+</p>
 
 <h1>Charts</h1>
 
 <p class="one_line_heading">
   Pyspread provides a graphical dialog to create matplotlib charts.
   Ideas or patches for additional matplotlib chart types or parameters are
-  greatly appreciated. Please include license information for icons.
+  greatly appreciated.
 </p>
 
 <p class="one_line_heading">
@@ -237,5 +249,5 @@ Chart overview:
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 11. May 2016</span>
+  Last changed: 10. November 2016</span>
 </p>
