Contribution page fixed

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -28,28 +28,29 @@
   languages. If you like to localize pyspread, please refer to the
   <a href="http://translationproject.org/domain/pyspread.html">translators' page</a>
   for detailed instructions.
-
 </p>
 
 <p class="one_line_heading"; style="color: rgb(0, 153, 0)>
   Full coverage of user interface (may still need polish):
-  <ul class="one_line_heading"> 
-    <li>Danish (da) by Joe Hansen</li>
-    <li>Ukrainian (uk) by Yuri Chornoivan</li>
-  </ul>
 </p>
+<ul class="one_line_heading"; style="color: rgb(255, 0, 0)> 
+  <li>Danish (da) by Joe Hansen</li>
+  <li>Ukrainian (uk) by Yuri Chornoivan</li>
+</ul>
+
 
 <p class="one_line_heading"; style="color: rgb(255, 0, 0)>
   Partially translated user interface:
-  <ul class="one_line_heading"> 
-    <li>Brazilian Portuguese (pt_BR) by Enrico Nicoletto and Rafael Fontenelle</li>
-    <li>Dutch (nl) by Mark Haanen</li>
-    <li>French (fr) by Frédéric Marchal</li>
-    <li>German (de) by Mario Blättermann, Martin Manns, Christian Kirbach and Philipp Thomas</li>
-    <li>Nowegian Bokmaal (nb) by Andreas Noteng</li>
-    <li>Nowegian Nynorsk (nn) by Andreas Noteng</li>
-  </ul>
 </p>
+<ul class="one_line_heading"; style="color: rgb(255, 0, 0)> 
+  <li>Brazilian Portuguese (pt_BR) by Enrico Nicoletto and Rafael Fontenelle</li>
+  <li>Dutch (nl) by Mark Haanen</li>
+  <li>French (fr) by Frédéric Marchal</li>
+  <li>German (de) by Mario Blättermann, Martin Manns, Christian Kirbach and Philipp Thomas</li>
+  <li>Nowegian Bokmaal (nb) by Andreas Noteng</li>
+  <li>Nowegian Nynorsk (nn) by Andreas Noteng</li>
+</ul>
+
 
 <p class="one_line_heading">
   Details of the user interface localization status can be seen at the
