Contribution page fix

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -33,7 +33,7 @@
 <p class="one_line_heading"; style="color: rgb(0, 153, 0)>
   Full coverage of user interface (may still need polish):
 </p>
-<ul class="one_line_heading"; style="color: rgb(255, 0, 0)> 
+<ul class="one_line_heading"> 
   <li>Danish (da) by Joe Hansen</li>
   <li>Ukrainian (uk) by Yuri Chornoivan</li>
 </ul>
@@ -42,7 +42,7 @@
 <p class="one_line_heading"; style="color: rgb(255, 0, 0)>
   Partially translated user interface:
 </p>
-<ul class="one_line_heading"; style="color: rgb(255, 0, 0)> 
+<ul class="one_line_heading"> 
   <li>Brazilian Portuguese (pt_BR) by Enrico Nicoletto and Rafael Fontenelle</li>
   <li>Dutch (nl) by Mark Haanen</li>
   <li>French (fr) by Frédéric Marchal</li>
