Contribution page polish

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -61,7 +61,7 @@
   ) are available, yet.
 </p>
 
-<h1>Localization</h1>
+<h1>Interfaces</h1>
 
 <p class="one_line_heading">
   Only basic support for the <a href src="http://opendocumentformat.org">Open Document Format (ODF)</a>
