Pie chart description added to First Steps

--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1845,7 +1845,7 @@
    In the Data box, a sequence of numerical values can be provided.
 </p>
 <p class="one_line_heading">
-   In the Pie box, ...
+   In the Pie box, labels for the wedges can be specified as a sequence of objects (e.g. strings). Wedge colors are provided in the Colors text box as sequence of strings, where colors can be the strings "b" (black) "g" (green) "r" (red) "c" (cyan) "m" (magenta) "y" (yellow) "k" (black) "w" (white), a floating point number between 0.0 and 1.0 for gray values or an htm hex string such as "#a36271". The pie chart can be rotated with the angle value, which may be a positive or negative integer. The checkbox shadow enables or disables a shadow behind the pie chart.
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot-chartdialog-piechart.png">
@@ -1901,7 +1901,7 @@
     Diagram and Area boxes are displayed.
 </p>
 <p class="one_line_heading">
-   In the Data box, ...
+    In the Data box, ...
 </p>
 <p class="one_line_heading">
    In the Diagram box, ...
