Website updated to v1.1

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -67,6 +67,10 @@
     entry line)</li>
   <li> <a href="http://cairographics.org/download/">pyrsvg</a>
     (&gt;=2.32, for displaying SVG files in cells)</li>
+  <li><a href="https://pythonhosted.org/pyenchant/">pyenchant</a>
+    (&gt;=1.1, for spell checking)</li>
+  <li><a href="https://wiki.videolan.org/Python_bindings">Python bindings for libvlc</a>
+    (with libvlc.so.5, for video playback)</li>
   <li><a href="http://matplotlib.org/basemap/">basemap</a>
     (&gt;=1.0.7, for the weather example pys file)<br>
   </li>
@@ -79,8 +83,8 @@
 
   These instructions are for installing the source tarball
   <br>
-  <a href="https://pypi.python.org/packages/f9/01/a3b4be117b4ea69d0d2c96fdfff47de9a4c61ba8295ed4f4a6ca5eb60306/pyspread-1.0.3.tar.gz#md5=b240c8fb57ce7354334982266fae47b5">pyspread v1.0.3</a>
-  (<a href="https://pypi.python.org/packages/f9/01/a3b4be117b4ea69d0d2c96fdfff47de9a4c61ba8295ed4f4a6ca5eb60306/pyspread-1.0.3.tar.gz.asc">gpg sig</a>).
+  <a href="https://pypi.python.org/packages/e6/00/a403138dafb651221c2025176d60f5d5764e729f27e6bf0ab5b6051fa408/pyspread-1.1.tar.gz#md5=e7ab9817c3e9b32c2bf99b20bb801421">pyspread v1.1</a>
+  (<a href="https://pypi.python.org/packages/e6/00/a403138dafb651221c2025176d60f5d5764e729f27e6bf0ab5b6051fa408/pyspread-1.1.tar.gz.asc">gpg sig</a>).
   <br> <br>
   Installation:
   <br>
@@ -241,5 +245,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 04. January 2017</span>
+  Last changed: 08. January 2017</span>
 </p>
