--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -51,10 +51,13 @@
   <li>PDF and SVG export</li>
   <li>SVG import*</li>
   <li>XLS import and export, XLSX import*</li>
+  <li>ODS import*</li>
   <li>Charts for visualizing data</li>
+  <li>Video playback in cells</li>
   <li>Python code in cells and in macros</li>
   <li>Python objects as cell results</li>
   <li>Code completion*</li>
+  <li>Spell checker*</li>
   <li>GIT-able pysu save file format</li>
   <li>GPG based save file signatures that prevent foreign code execution*</li>
   <li>Access to all Python modules from within cells. These
@@ -132,5 +135,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 11. May 2016</span>
+  Last changed: 8. January 2017</span>
 </p>
