Web site note that vlc requires optional dependencies

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -53,9 +53,9 @@
   <li>XLS import and export, XLSX import*</li>
   <li>ODS import*</li>
   <li>Charts for visualizing data</li>
-  <li>Video playback in cells</li>
   <li>Python code in cells and in macros</li>
   <li>Python objects as cell results</li>
+  <li>Video playback in cells*</li>
   <li>Code completion*</li>
   <li>Spell checker*</li>
   <li>GIT-able pysu save file format</li>
